# thevenin

./: CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codecov.yml  release.yml
docs/source/development/: code_style_and_linting.rst
scripts/: version_checker.py
src/thevenin/: __init__.py  _basemodel.py  _experiment.py  _prediction.py  _simulation.py  _solutions.py
src/thevenin/loadfns/: __init__.py  _ramps.py  _steps.py
src/thevenin/plotutils/: _colors.py
