[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thevenin"
readme = "README.md"
dynamic = ["version"]
description = "Equivalent circuit models in Python."
keywords = ["ECM", "equivalent", "circuit", "model", "battery"]
requires-python = ">=3.10,<3.15"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ruamel.yaml",
    "scikit-sundae>=1.1.0",
]

[tool.setuptools.dynamic]
version = {attr = "thevenin.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thevenin = ["_resources/*.yaml"]

[tool.ruff]
line-length = 80
exclude = ["build", "docs", "images", "reports"]

[tool.ruff.lint]
preview = true
select = [
    "E",  # All pycodestyle errors
    "W",  # All pycodestyle warnings
    "F",  # All pyflakes errors
    "B",  # All flake8-bugbear checks
    "D",  # All pydocstyle checks
]
extend-select = [
    "E302", "E305",  # Expected blank lines (requires preview=true, above)
]
ignore = [
    "B007", "B009", "B010", "B028", "B905",
    "D1", "D203", "D205", "D212", "D400", "D401", "D415",
    "E201", "E202", "E226", "E241", "E731",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
dev = [
    "nox",
    "ruff",
    "codespell",
    "genbadge[all]",
    "thevenin[docs,tests]",
]

[project.urls]
Homepage = "https://github.com/NatLabRockies/thevenin"
Documentation = "https://thevenin.readthedocs.io"
Repository = "https://github.com/NatLabRockies/thevenin"
Issues = "https://github.com/NatLabRockies/thevenin/issues"
